smal fix for not being able to hide the player view on mobile devices

--- a/css/musicdb.css
+++ b/css/musicdb.css
@@ -240,6 +240,7 @@ ol li {
 	border-top: 1px solid #cccccc;
 	box-shadow: 1px -1px 0 rgba(0,0,0,0.25);	
 	z-index: 3;
+	-webkit-transition: translate3d(0,0,0);
 }
 #player .thumbnail {
 	width: 9%;
@@ -322,12 +323,12 @@ ol li {
 	}
 	#player .thumbnail {
 		left: auto;
-		right: 16px;
+		right: 24px;
 		width: 13.5%;
 	}
 	#player > .close {
 		position: absolute;
-		right: 2px;
+		right: 6px;
 		bottom: 2px;
 	}
 }
